<?xml version="1.0"?>
<package format="3">
  <name>merge_arrays</name>
  <version>0.0.1</version>
  <description>A simple ROS 2 package that merges arrays.</description>
  <maintainer email="kchauhan5@wisc.edu">Krish</maintainer>
  <license>NONE</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>